# eis-conv

./: .gitignore  README.md  main.spec  pyproject.toml
src/eisconv/: eis_data.py  examples.py  main.py  main_window.py
src/eisconv/designer/: MainWindow.ui
src/eisconv/export_styles/: enums.py  excel_style.py  zview_style.py
src/eisconv/import_styles/: hp_style.py  nova_style.py
src/eisconv/ui/: main_window_ui.py
test_data/: autolab_example_data.txt  hp_example_data.txt
